# fsf

./: README.md
.github/workflows/: run-tests.yml
compiler/: .gitignore  Cargo.toml
compiler/src/: expression.rs  identifier_transformer.rs  item.rs  main.rs  parser.rs  printer.rs  scanner.rs  statement.rs  test_collector.rs  token.rs
compiler/src/bootstrap/: js_bootstrap.js  react_bootstrap_footer.js  react_bootstrap_header.js
compiler/src/compilers/: go_compiler.rs  js_compiler.rs  mod.rs
compiler/src/targets/: go_target.rs  js_target.rs  mod.rs
compiler/src/templates/: test_runner.fsf
compiler/src/transformers/: ast_visitor.rs  mod.rs  stdlib_transformer.rs  test_runner_transformer.rs
compiler/src/transformers/identifier_transformer/: go_identifier_transformer.rs  js_identifier_transformer.rs  mod.rs
example/: index.wip  index.zhtml  test.wip
examples/chirper/: index.fsf
examples/counter/: index.fsf
examples/dumping_ground/: main.fsf
examples/hello_world/: main.fsf
javascript/: build.js  package.json
regression_tests/: .gitignore  test_runner.sh  undeclared_variable.out
regression_tests/undeclared_variable/: main.fsf
runtime/: go.mod  main.go
std/: greeting.fsf  react.fsf
test_runner/: test_runner.go  test_runner.js
tests/: example_file_module.fsf  test_arithmetic.fsf  test_arrays.fsf  test_conditionals.fsf  test_fstrings.fsf  test_imports.fsf  test_lambdas.fsf  test_structs.fsf  test_tuples.fsf  test_variables.fsf
