[package]
name = "compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.13.0"
thiserror = "1.0.63"
clap = { version = "4.5.27", features = ["derive"] }
anyhow = "1.0.95"
regex = "1.11.1"
